--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:hint="@string/hint_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
+            android:text="michael.jordan.java@gmail.com"
             android:textColor="#000"
             android:textColorHint="#000"
             android:textSize="20sp"
@@ -75,6 +76,7 @@
             android:hint="@string/hint_senha"
             android:inputType="textPassword"
             android:maxLines="1"
+            android:text="123456"
             android:textColor="#000"
             android:textColorHint="#000"
             android:textSize="20sp"
