--- a/app/src/main/res/layout/activity_clientes.xml
+++ b/app/src/main/res/layout/activity_clientes.xml
@@ -5,21 +5,19 @@
     android:id="@+id/constraintListClientes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/fundo_cliente"
     tools:context=".Activity.ClientesActivity">
 
     <include
         android:id="@+id/include"
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_height="?actionBarSize" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerClientes"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="263dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -31,7 +29,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.284" />
 
 
 </android.support.constraint.ConstraintLayout>
